--- a/simplefoc04_stm32f103_open_vel_ctrl/simplefoc_stm32f103.ioc
+++ b/simplefoc04_stm32f103_open_vel_ctrl/simplefoc_stm32f103.ioc
@@ -18,9 +18,10 @@ Mcu.Pin0=PC13-TAMPER-RTC
 Mcu.Pin1=PD0-OSC_IN
 Mcu.Pin10=PB6
 Mcu.Pin11=PB7
-Mcu.Pin12=VP_SYS_VS_Systick
-Mcu.Pin13=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin14=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin12=PB9
+Mcu.Pin13=VP_SYS_VS_Systick
+Mcu.Pin14=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin15=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PD1-OSC_OUT
 Mcu.Pin3=PA0-WKUP
 Mcu.Pin4=PA1
@@ -29,7 +30,7 @@ Mcu.Pin6=PB10
 Mcu.Pin7=PB11
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=15
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103CBTx
@@ -69,6 +70,12 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
+PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB9.GPIO_Label=m1_enable
+PB9.GPIO_PuPd=GPIO_PULLDOWN
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB9.Locked=true
+PB9.Signal=GPIO_Output
 PC13-TAMPER-RTC.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=run_led
 PC13-TAMPER-RTC.GPIO_PuPd=GPIO_PULLDOWN
@@ -107,7 +114,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true,4-MX_I2C2_Init-I2C2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
