--- a/simplefoc09_stm32f103_adc_sample/simplefoc_stm32f103.ioc
+++ b/simplefoc09_stm32f103_adc_sample/simplefoc_stm32f103.ioc
@@ -2,14 +2,15 @@
 ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC1.Channel-6\#ChannelRegularConversion=ADC_CHANNEL_4
 ADC1.ContinuousConvMode=DISABLE
-ADC1.DiscontinuousConvMode=DISABLE
+ADC1.DiscontinuousConvMode=ENABLE
 ADC1.EnableInjectedConversion=DISABLE
 ADC1.EnableRegularConversion=ENABLE
-ADC1.IPParameters=ContinuousConvMode,EnableInjectedConversion,InjNumberOfConversion,master,Mode,EnableRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,NbrOfConversionFlag,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,NbrOfConversion,DiscontinuousConvMode
+ADC1.IPParameters=ContinuousConvMode,EnableInjectedConversion,InjNumberOfConversion,master,Mode,EnableRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,NbrOfConversionFlag,Rank-6\#ChannelRegularConversion,Channel-6\#ChannelRegularConversion,SamplingTime-6\#ChannelRegularConversion,NbrOfConversion,DiscontinuousConvMode,NbrOfDiscConversion
 ADC1.InjNumberOfConversion=2
 ADC1.Mode=__NULL
 ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
+ADC1.NbrOfDiscConversion=1
 ADC1.Rank-5\#ChannelRegularConversion=1
 ADC1.Rank-6\#ChannelRegularConversion=2
 ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_7CYCLES_5
