--- a/stm32f103_ll_library24_TIM_Center_PWM_FOC/stm32f103zet6.ioc
+++ b/stm32f103_ll_library24_TIM_Center_PWM_FOC/stm32f103zet6.ioc
@@ -29,23 +29,28 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=TIM5
+Mcu.IP4=TIM1
 Mcu.IP5=USART1
 Mcu.IPNb=6
 Mcu.Name=STM32F103Z(C-D-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE5
 Mcu.Pin1=OSC_IN
-Mcu.Pin10=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=OSC_OUT
-Mcu.Pin3=PA0-WKUP
-Mcu.Pin4=PA9
-Mcu.Pin5=PA10
-Mcu.Pin6=PA13
-Mcu.Pin7=PA14
-Mcu.Pin8=PB5
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.Pin3=PE8
+Mcu.Pin4=PE9
+Mcu.Pin5=PE10
+Mcu.Pin6=PE11
+Mcu.Pin7=PE12
+Mcu.Pin8=PE13
+Mcu.Pin9=PA9
+Mcu.PinsNb=16
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103ZETx
@@ -69,9 +74,6 @@ OSC_IN.Mode=HSE-External-Oscillator
 OSC_IN.Signal=RCC_OSC_IN
 OSC_OUT.Mode=HSE-External-Oscillator
 OSC_OUT.Signal=RCC_OSC_OUT
-PA0-WKUP.GPIOParameters=GPIO_Speed
-PA0-WKUP.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
-PA0-WKUP.Signal=S_TIM5_CH1
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA13.Mode=Serial_Wire
@@ -87,12 +89,33 @@ PB5.GPIO_PuPd=GPIO_PULLDOWN
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB5.Locked=true
 PB5.Signal=GPIO_Output
+PE10.GPIOParameters=GPIO_Speed
+PE10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE10.Mode=PWM Generation2 CH2 CH2N
+PE10.Signal=TIM1_CH2N
+PE11.GPIOParameters=GPIO_Speed
+PE11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE11.Signal=S_TIM1_CH2
+PE12.GPIOParameters=GPIO_Speed
+PE12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE12.Mode=PWM Generation3 CH3 CH3N
+PE12.Signal=TIM1_CH3N
+PE13.GPIOParameters=GPIO_Speed
+PE13.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE13.Signal=S_TIM1_CH3
 PE5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PE5.GPIO_Label=LED1
 PE5.GPIO_PuPd=GPIO_PULLDOWN
 PE5.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PE5.Locked=true
 PE5.Signal=GPIO_Output
+PE8.GPIOParameters=GPIO_Speed
+PE8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE8.Mode=PWM Generation1 CH1 CH1N
+PE8.Signal=TIM1_CH1N
+PE9.GPIOParameters=GPIO_Speed
+PE9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PE9.Signal=S_TIM1_CH1
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -121,7 +144,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART1_UART_Init-USART1-false-LL-true,5-MX_TIM5_Init-TIM5-false-LL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-LL-false,2-MX_GPIO_Init-GPIO-false-LL-true,3-MX_DMA_Init-DMA-false-LL-true,4-MX_USART1_UART_Init-USART1-false-LL-true,5-MX_TIM1_Init-TIM1-false-LL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -148,19 +171,32 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.S_TIM5_CH1.0=TIM5_CH1,PWM Generation1 CH1
-SH.S_TIM5_CH1.ConfNb=1
-TIM5.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM5.IPParameters=Channel-PWM Generation1 CH1,OCPolarity_1,Prescaler,Period,Pulse-PWM Generation1 CH1,AutoReloadPreload
-TIM5.OCPolarity_1=TIM_OCPOLARITY_HIGH
-TIM5.Period=1000
-TIM5.Prescaler=71
-TIM5.Pulse-PWM\ Generation1\ CH1=500
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3 CH3N
+SH.S_TIM1_CH3.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM1.Channel-PWM\ Generation1\ CH1\ CH1N=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2\ CH2N=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3\ CH3N=TIM_CHANNEL_3
+TIM1.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
+TIM1.DeadTime=100
+TIM1.IPParameters=CounterMode,RepetitionCounter,Period,AutoReloadPreload,TIM_MasterOutputTrigger,DeadTime,Channel-PWM Generation1 CH1 CH1N,Channel-PWM Generation2 CH2 CH2N,Channel-PWM Generation3 CH3 CH3N,OCMode_PWM-PWM Generation1 CH1 CH1N,OCMode_PWM-PWM Generation2 CH2 CH2N,OCMode_PWM-PWM Generation3 CH3 CH3N,Pulse-PWM Generation1 CH1 CH1N,Pulse-PWM Generation2 CH2 CH2N,Pulse-PWM Generation3 CH3 CH3N
+TIM1.OCMode_PWM-PWM\ Generation1\ CH1\ CH1N=TIM_OCMODE_PWM2
+TIM1.OCMode_PWM-PWM\ Generation2\ CH2\ CH2N=TIM_OCMODE_PWM2
+TIM1.OCMode_PWM-PWM\ Generation3\ CH3\ CH3N=TIM_OCMODE_PWM2
+TIM1.Period=3600
+TIM1.Pulse-PWM\ Generation1\ CH1\ CH1N=1200
+TIM1.Pulse-PWM\ Generation2\ CH2\ CH2N=1200
+TIM1.Pulse-PWM\ Generation3\ CH3\ CH3N=1200
+TIM1.RepetitionCounter=1
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM5_VS_ClockSourceINT.Mode=Internal
-VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 board=custom
