--- a/simplefoc17_stm32f405_hall_sensor/stm32f405rgt.ioc
+++ b/simplefoc17_stm32f405_hall_sensor/stm32f405rgt.ioc
@@ -17,19 +17,22 @@ Mcu.Name=STM32F405RGTx
 Mcu.Package=LQFP64
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
-Mcu.Pin10=PD2
-Mcu.Pin11=VP_SYS_VS_Systick
-Mcu.Pin12=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin13=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin10=PA14
+Mcu.Pin11=PD2
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin16=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PB13
 Mcu.Pin3=PB14
 Mcu.Pin4=PB15
-Mcu.Pin5=PA8
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
-Mcu.PinsNb=14
+Mcu.Pin5=PC9
+Mcu.Pin6=PA8
+Mcu.Pin7=PA9
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13
+Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F405RGTx
@@ -37,6 +40,8 @@ MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -45,8 +50,8 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA10.GPIOParameters=GPIO_Speed
 PA10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
@@ -76,6 +81,21 @@ PB15.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB15.Locked=true
 PB15.Mode=PWM Generation3 CH3 CH3N
 PB15.Signal=TIM1_CH3N
+PB4.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB4.GPIO_Label=M0_ENC_A
+PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB4.Locked=true
+PB4.Signal=GPXTI4
+PB5.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PB5.GPIO_Label=M0_ENC_B
+PB5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PB5.Locked=true
+PB5.Signal=GPXTI5
+PC9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC9.GPIO_Label=M0_ENC_C
+PC9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PC9.Locked=true
+PC9.Signal=GPXTI9
 PD2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PD2.GPIO_Label=RUN_LED
 PD2.GPIO_PuPd=GPIO_PULLDOWN
@@ -151,6 +171,12 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.GPXTI4.0=GPIO_EXTI4
+SH.GPXTI4.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1 CH1N
 SH.S_TIM1_CH1.ConfNb=1
 SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2 CH2N
